--- a/mini-amazon-skeleton/app/templates/index.html
+++ b/mini-amazon-skeleton/app/templates/index.html
@@ -11,6 +11,7 @@
       <th scope="col">Product ID</th>
       <th scope="col">Product Name</th>
       <th scope="col">Price</th>
+      <th scope="col">Review</th>
     </tr>
   </thead>
   <tbody>
@@ -19,6 +20,7 @@
         <th scope="row">{{product.id}}</th>
         <td>{{product.name}}</td>
         <td>{{product.price}}</td>
+        <td><a href="/social/review/{{product.id}}">review</a></td>
       </tr>
     {% endfor %}
   </tbody>
